--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>VuePress</title>
-    <meta name="description" content="">
+    <title>直播组件库</title>
+    <meta name="description" content="常用前端组件规范化集合">
     
     
-    <link rel="preload" href="/assets/css/styles.e9a0eece.css" as="style"><link rel="preload" href="/assets/js/app.e9a0eece.js" as="script"><link rel="prefetch" href="/assets/css/1.styles.5a8ea794.css"><link rel="prefetch" href="/assets/js/1.5a8ea794.js"><link rel="prefetch" href="/assets/css/2.styles.c9bb0a50.css"><link rel="prefetch" href="/assets/js/2.c9bb0a50.js">
-    <link rel="stylesheet" href="/assets/css/styles.e9a0eece.css"><link rel="stylesheet" href="/assets/css/1.styles.5a8ea794.css"><link rel="stylesheet" href="/assets/css/2.styles.c9bb0a50.css">
+    <link rel="preload" href="/dataCom/assets/css/styles.e2be2599.css" as="style"><link rel="preload" href="/dataCom/assets/js/app.e2be2599.js" as="script"><link rel="prefetch" href="/dataCom/assets/css/5.styles.0dc53082.css"><link rel="prefetch" href="/dataCom/assets/css/1.styles.3c734fff.css"><link rel="prefetch" href="/dataCom/assets/js/1.3c734fff.js"><link rel="prefetch" href="/dataCom/assets/css/2.styles.58886ac2.css"><link rel="prefetch" href="/dataCom/assets/js/2.58886ac2.js"><link rel="prefetch" href="/dataCom/assets/css/3.styles.7b0896d8.css"><link rel="prefetch" href="/dataCom/assets/js/3.7b0896d8.js"><link rel="prefetch" href="/dataCom/assets/css/4.styles.97d148ac.css"><link rel="prefetch" href="/dataCom/assets/js/4.97d148ac.js"><link rel="prefetch" href="/dataCom/assets/js/5.0dc53082.js"><link rel="prefetch" href="/dataCom/assets/css/6.styles.cd073fde.css"><link rel="prefetch" href="/dataCom/assets/js/6.cd073fde.js"><link rel="prefetch" href="/dataCom/assets/js/7.78b8c67c.js"><link rel="prefetch" href="/dataCom/assets/js/8.f13fecf8.js"><link rel="prefetch" href="/dataCom/assets/js/9.ed835472.js"><link rel="prefetch" href="/dataCom/assets/js/10.98100a87.js"><link rel="prefetch" href="/dataCom/assets/js/11.1b056378.js"><link rel="prefetch" href="/dataCom/assets/js/12.42c798a7.js"><link rel="prefetch" href="/dataCom/assets/js/13.20e1cb4d.js"><link rel="prefetch" href="/dataCom/assets/js/14.98258230.js">
+    <link rel="stylesheet" href="/dataCom/assets/css/5.styles.0dc53082.css"><link rel="stylesheet" href="/dataCom/assets/css/styles.e2be2599.css"><link rel="stylesheet" href="/dataCom/assets/css/1.styles.3c734fff.css"><link rel="stylesheet" href="/dataCom/assets/css/2.styles.58886ac2.css"><link rel="stylesheet" href="/dataCom/assets/css/3.styles.7b0896d8.css"><link rel="stylesheet" href="/dataCom/assets/css/4.styles.97d148ac.css"><link rel="stylesheet" href="/dataCom/assets/css/6.styles.cd073fde.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.e9a0eece.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/dataCom/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/dataCom/assets/js/app.e2be2599.js" defer></script>
   </body>
 </html>
