--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-     <H1>test!</H1>
-</body>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>直播组件库</title>
+    <meta name="description" content="常用前端组件规范化集合">
+    
+    
+    <link rel="preload" href="/dataCom/assets/css/styles.e2be2599.css" as="style"><link rel="preload" href="/dataCom/assets/js/app.e2be2599.js" as="script"><link rel="preload" href="/dataCom/assets/js/9.ed835472.js" as="script"><link rel="prefetch" href="/dataCom/assets/css/5.styles.0dc53082.css"><link rel="prefetch" href="/dataCom/assets/css/1.styles.3c734fff.css"><link rel="prefetch" href="/dataCom/assets/js/1.3c734fff.js"><link rel="prefetch" href="/dataCom/assets/css/2.styles.58886ac2.css"><link rel="prefetch" href="/dataCom/assets/js/2.58886ac2.js"><link rel="prefetch" href="/dataCom/assets/css/3.styles.7b0896d8.css"><link rel="prefetch" href="/dataCom/assets/js/3.7b0896d8.js"><link rel="prefetch" href="/dataCom/assets/css/4.styles.97d148ac.css"><link rel="prefetch" href="/dataCom/assets/js/4.97d148ac.js"><link rel="prefetch" href="/dataCom/assets/js/5.0dc53082.js"><link rel="prefetch" href="/dataCom/assets/css/6.styles.cd073fde.css"><link rel="prefetch" href="/dataCom/assets/js/6.cd073fde.js"><link rel="prefetch" href="/dataCom/assets/js/7.78b8c67c.js"><link rel="prefetch" href="/dataCom/assets/js/8.f13fecf8.js"><link rel="prefetch" href="/dataCom/assets/js/10.98100a87.js"><link rel="prefetch" href="/dataCom/assets/js/11.1b056378.js"><link rel="prefetch" href="/dataCom/assets/js/12.42c798a7.js"><link rel="prefetch" href="/dataCom/assets/js/13.20e1cb4d.js"><link rel="prefetch" href="/dataCom/assets/js/14.98258230.js">
+    <link rel="stylesheet" href="/dataCom/assets/css/5.styles.0dc53082.css"><link rel="stylesheet" href="/dataCom/assets/css/styles.e2be2599.css"><link rel="stylesheet" href="/dataCom/assets/css/1.styles.3c734fff.css"><link rel="stylesheet" href="/dataCom/assets/css/2.styles.58886ac2.css"><link rel="stylesheet" href="/dataCom/assets/css/3.styles.7b0896d8.css"><link rel="stylesheet" href="/dataCom/assets/css/4.styles.97d148ac.css"><link rel="stylesheet" href="/dataCom/assets/css/6.styles.cd073fde.css">
+  </head>
+  <body>
+    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/dataCom/" class="home-link router-link-exact-active router-link-active"><!----> <span class="site-name">直播组件库</span></a> <div class="links" style="max-width:nullpx;"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/dataCom/" class="nav-link router-link-exact-active router-link-active">主页</a></div><div class="nav-item"><a href="/dataCom/baseComponents/" class="nav-link">组件文档</a></div><div class="nav-item"><a href="/dataCom/knowledge/" class="nav-link">知识库</a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <div class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/dataCom/" class="nav-link router-link-exact-active router-link-active">主页</a></div><div class="nav-item"><a href="/dataCom/baseComponents/" class="nav-link">组件文档</a></div><div class="nav-item"><a href="/dataCom/knowledge/" class="nav-link">知识库</a></div> <!----></nav>  <!----> </div> <div class="home"><div class="hero"><!----> <h1>直播组件库</h1> <p class="description">
+      常用前端组件规范化集合
+    </p> <p class="action"><a href="/dataCom/baseComponents/" class="nav-link action-button">前往 →</a></p></div> <div class="features"><div class="feature"><h2>布局类组件</h2> <p>基本组件，为常用组件提供快速，可用的组件</p></div><div class="feature"><h2>可视化组件</h2> <p>积累将数据可视化的业务组件</p></div><div class="feature"><h2>知识库</h2> <p>积累前端相关的知识，涵盖 css、vue、react、koa2、nodejs 相关的知识点</p></div></div> <div class="content custom"></div> <!----></div> <!----></div></div>
+    <script src="/dataCom/assets/js/9.ed835472.js" defer></script><script src="/dataCom/assets/js/app.e2be2599.js" defer></script>
+  </body>
 </html>
